err/frameduino.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FrameDuino-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/frameduino'...
Compiling './lib/python3.5/site-packages/frameduino/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 31)
Listing './lib/python3.5/site-packages/frameduino/drivers'...
Compiling './lib/python3.5/site-packages/frameduino/drivers/abstract_driver.py'...
*** Sorry: TabError: Missing parentheses in call to 'print' (abstract_driver.py, line 22)
Compiling './lib/python3.5/site-packages/frameduino/drivers/bt_driver.py'...
***   File "./lib/python3.5/site-packages/frameduino/drivers/bt_driver.py", line 60
    print "Could not connect: ", error, "; Retrying in 10s..."
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/frameduino/drivers/cdc_driver.py'...
***   File "./lib/python3.5/site-packages/frameduino/drivers/cdc_driver.py", line 72
    except serial.serialutil.SerialException, V:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frameduino/drivers/serial_driver.py'...
***   File "./lib/python3.5/site-packages/frameduino/drivers/serial_driver.py", line 72
    except serial.serialutil.SerialException, V:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frameduino/drivers/usb_driver.py'...
***   File "./lib/python3.5/site-packages/frameduino/drivers/usb_driver.py", line 69
    except usb.core.USBError, V:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
